Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - avoid fatal errors on MSWin32 or any system where symlink support
            is not available (see github #5)
          - silence "no bash" warnings during testing

0.119     2016-09-04 22:48:25Z
          - Module::Metadata is no longer used as a test prereq (via
            [Test::ReportPrereqs]) if ExtUtils::MakeMaker is the sole
            installer, to avoid adding possibly-unwanted prereqs (Graham Knop)

0.118     2016-08-07 21:59:49Z
          - in tests, report the installed version of more tools, to aid in
            diagnosing buggy CPANTesters reports

0.117     2016-06-19 17:13:44Z
          - new 'authority' configuration option
          - bump prereq version for [Test::CPAN::Changes], to avoid the broken
            0.011 release

0.116     2016-06-12 01:07:29Z
          - bump prereq version for [Test::Portability] for the new xt/author
            placement
          - removed [AuthorityFromModule], as recent PAUSE improvements have
            rendered it redundant

0.115     2016-05-28 20:33:51Z
          - [Test::PodSpelling] now also tests files in examples/, lib/,
            script/, t/, xt/ directories
          - bump prereq version for [Test::Pod::No404s] for the new xt/author
            placement (RT#114799)
          - fix tests that fail with Dist::Zilla::Plugin::NextRelease 6.005

0.114     2016-04-27 04:26:51Z
          - fix PodWeaver config test that broke when Dist::Zilla::Tester
            behaviour changed

0.113     2016-04-23 16:11:17Z
          - remove last vestiges of Path::Class

0.112     2016-03-14 02:35:38Z
          - adjust minting template so vim modeline is always high enough to
            be respected (first five lines)
          - use new version_extractor = Module::Metadata feature in
            [Test::ReportPrereqs]

0.111     2016-02-10 04:50:57Z
          - use more sophisticated markup for the irc channel in SUPPORT pod